must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/deployment.sidecar-injector.jaegertracing.io-j4gfd.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2023-03-24T09:39:03Z"
  generateName: deployment.sidecar-injector.jaegertracing.io-
  generation: 1
  labels:
    olm.owner: jaeger-operator.v1.39.0-3
    olm.owner.kind: ClusterServiceVersion
    olm.owner.namespace: openshift-distributed-tracing
    olm.webhook-description-generate-name: deployment.sidecar-injector.jaegertracing.io
    olm.webhook-description-hash: 75dcd959d7
  name: deployment.sidecar-injector.jaegertracing.io-j4gfd
  resourceVersion: "639664"
  uid: cb253076-5dcd-41c4-bdf3-5a7f4b02aa0d
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ2RENDQVdLZ0F3SUJBZ0lJZHl1ak55TDdNeEV3Q2dZSUtvWkl6ajBFQXdJd1FqRVdNQlFHQTFVRUNoTU4KVW1Wa0lFaGhkQ3dnU1c1akxqRW9NQ1lHQTFVRUF4TWZiMnh0TFhObGJHWnphV2R1WldRdE56Y3lZbUV6TXpjeQpNbVppTXpNeE1UQWVGdzB5TXpBek1qUXdPVE01TUROYUZ3MHlOVEF6TWpNd09UTTVNRE5hTUVJeEZqQVVCZ05WCkJBb1REVkpsWkNCSVlYUXNJRWx1WXk0eEtEQW1CZ05WQkFNVEgyOXNiUzF6Wld4bWMybG5ibVZrTFRjM01tSmgKTXpNM01qSm1Zak16TVRFd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRVjlSZlIyWXlZYXIxMwoyRlRhQmxFeEw2aj [...]
    service:
      name: jaeger-operator-service
      namespace: openshift-distributed-tracing
      path: /mutate-v1-deployment
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: deployment.sidecar-injector.jaegertracing.io
  namespaceSelector: {}
  objectSelector:
    matchExpressions:
    - key: name
      operator: NotIn
      values:
      - jaeger-operator
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - apps
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
