must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/istiod-basic-istio-system.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingWebhookConfiguration","metadata":{"annotations":{"maistra.io/mesh-generation":"2.3.2-1-5"},"labels":{"app":"sidecar-injector","app.kubernetes.io/component":"istio-discovery","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"istio-discovery","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.3.2-1-5","istio.io/rev":"basic","maistra-versi [...]
    maistra.io/mesh-generation: 2.3.2-1-5
  creationTimestamp: "2023-03-24T17:28:10Z"
  generation: 2
  labels:
    app: sidecar-injector
    app.kubernetes.io/component: istio-discovery
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: istio-discovery
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 2.3.2-1-5
    istio.io/rev: basic
    maistra-version: 2.3.2
    maistra.io/owner: istio-system
    maistra.io/owner-name: basic
    release: istio
  name: istiod-basic-istio-system
  resourceVersion: "885830"
  uid: f63fa697-4fca-492a-a881-bf209e3afb08
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQU1MdmZ6WktpL0VaT3dLMHdVZlJUeVF3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU16QXpNalF4TURFek1UWmFGdzB6TXpBegpNakV4TURFek1UWmFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRFRRdktZUTlyWUIwQlVxR24xZnZ5TzkrUUpadzd6czdwRUlsMEgKdlRnSG1WdVJvc0pPMVRMTVVJUmhSNTBDVk1WcWIwd2lINVphQ1dUWmp4TUZxNDR4ZHNsSFJLN21FT2tUMXVZbApBUkpOTStaRlljMz [...]
    service:
      name: istiod-basic
      namespace: istio-system
      path: /inject
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: sidecar-injector.istio.io
  namespaceSelector:
    matchExpressions:
    - key: maistra.io/member-of
      operator: In
      values:
      - istio-system
    - key: maistra.io/ignore-namespace
      operator: DoesNotExist
    - key: istio-injection
      operator: NotIn
      values:
      - disabled
    - key: istio-env
      operator: DoesNotExist
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
