must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/minstrumentation.kb.io-w94kd.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2023-03-24T09:33:22Z"
  generateName: minstrumentation.kb.io-
  generation: 1
  labels:
    olm.owner: opentelemetry-operator.v0.63.1-4
    olm.owner.kind: ClusterServiceVersion
    olm.owner.namespace: openshift-operators
    olm.webhook-description-generate-name: minstrumentation.kb.io
    olm.webhook-description-hash: 5487f6595c
  name: minstrumentation.kb.io-w94kd
  resourceVersion: "636374"
  uid: ffd6f7b0-aa8d-4701-be0e-c65dbc8d392f
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ2RENDQVdLZ0F3SUJBZ0lJU0JhU1dEdkZqaG93Q2dZSUtvWkl6ajBFQXdJd1FqRVdNQlFHQTFVRUNoTU4KVW1Wa0lFaGhkQ3dnU1c1akxqRW9NQ1lHQTFVRUF4TWZiMnh0TFhObGJHWnphV2R1WldRdE5EZ3hOamt5TlRnegpZbU0xT0dVeFlUQWVGdzB5TXpBek1qUXdPVE16TWpKYUZ3MHlOVEF6TWpNd09UTXpNakphTUVJeEZqQVVCZ05WCkJBb1REVkpsWkNCSVlYUXNJRWx1WXk0eEtEQW1CZ05WQkFNVEgyOXNiUzF6Wld4bWMybG5ibVZrTFRRNE1UWTUKTWpVNE0ySmpOVGhsTVdFd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFSVEpYOCtEREVmYjhSNwpEREJaMk1KUWpqWn [...]
    service:
      name: opentelemetry-operator-controller-manager-service
      namespace: openshift-operators
      path: /mutate-opentelemetry-io-v1alpha1-instrumentation
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: minstrumentation.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - opentelemetry.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - instrumentations
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
