must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/mjaeger.kb.io-pkkc9.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2023-03-24T09:39:03Z"
  generateName: mjaeger.kb.io-
  generation: 1
  labels:
    olm.owner: jaeger-operator.v1.39.0-3
    olm.owner.kind: ClusterServiceVersion
    olm.owner.namespace: openshift-distributed-tracing
    olm.webhook-description-generate-name: mjaeger.kb.io
    olm.webhook-description-hash: 5c6c65dbdf
  name: mjaeger.kb.io-pkkc9
  resourceVersion: "639667"
  uid: e6e1cfe0-a64f-4136-9b8d-21c1ae711317
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ2RENDQVdLZ0F3SUJBZ0lJZHl1ak55TDdNeEV3Q2dZSUtvWkl6ajBFQXdJd1FqRVdNQlFHQTFVRUNoTU4KVW1Wa0lFaGhkQ3dnU1c1akxqRW9NQ1lHQTFVRUF4TWZiMnh0TFhObGJHWnphV2R1WldRdE56Y3lZbUV6TXpjeQpNbVppTXpNeE1UQWVGdzB5TXpBek1qUXdPVE01TUROYUZ3MHlOVEF6TWpNd09UTTVNRE5hTUVJeEZqQVVCZ05WCkJBb1REVkpsWkNCSVlYUXNJRWx1WXk0eEtEQW1CZ05WQkFNVEgyOXNiUzF6Wld4bWMybG5ibVZrTFRjM01tSmgKTXpNM01qSm1Zak16TVRFd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFRVjlSZlIyWXlZYXIxMwoyRlRhQmxFeEw2aj [...]
    service:
      name: jaeger-operator-service
      namespace: openshift-distributed-tracing
      path: /mutate-jaegertracing-io-v1-jaeger
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mjaeger.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - jaegertracing.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jaegers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
