must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/mpod.kb.io-gnvcn.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2023-03-24T09:33:22Z"
  generateName: mpod.kb.io-
  generation: 1
  labels:
    olm.owner: opentelemetry-operator.v0.63.1-4
    olm.owner.kind: ClusterServiceVersion
    olm.owner.namespace: openshift-operators
    olm.webhook-description-generate-name: mpod.kb.io
    olm.webhook-description-hash: 6d74d4f4cb
  name: mpod.kb.io-gnvcn
  resourceVersion: "636380"
  uid: bbd1c6ab-9a77-46cb-9172-471485ab267c
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ2RENDQVdLZ0F3SUJBZ0lJU0JhU1dEdkZqaG93Q2dZSUtvWkl6ajBFQXdJd1FqRVdNQlFHQTFVRUNoTU4KVW1Wa0lFaGhkQ3dnU1c1akxqRW9NQ1lHQTFVRUF4TWZiMnh0TFhObGJHWnphV2R1WldRdE5EZ3hOamt5TlRnegpZbU0xT0dVeFlUQWVGdzB5TXpBek1qUXdPVE16TWpKYUZ3MHlOVEF6TWpNd09UTXpNakphTUVJeEZqQVVCZ05WCkJBb1REVkpsWkNCSVlYUXNJRWx1WXk0eEtEQW1CZ05WQkFNVEgyOXNiUzF6Wld4bWMybG5ibVZrTFRRNE1UWTUKTWpVNE0ySmpOVGhsTVdFd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFSVEpYOCtEREVmYjhSNwpEREJaMk1KUWpqWn [...]
    service:
      name: opentelemetry-operator-controller-manager-service
      namespace: openshift-operators
      path: /mutate-v1-pod
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mpod.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
